--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,11 +40,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
     //rx
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
     //load image
     implementation 'com.squareup.picasso:picasso:2.71828'
-
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -57,10 +56,8 @@ dependencies {
 
 
     def roomVersion = "2.3.0"
-
     implementation("androidx.room:room-runtime:$roomVersion")
     kapt ("androidx.room:room-compiler:$roomVersion")
-    // optional - Kotlin Extensions and Coroutines support for Room
-    implementation("androidx.room:room-ktx:$roomVersion")
 
+    implementation 'androidx.fragment:fragment-ktx:1.1.0'
 }
