work in detal info screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CryptoViewApp">
         <activity
+            android:screenOrientation="fullSensor"
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
