--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 }
 
 dependencies {
+    implementation "com.github.PhilJay:MPAndroidChart:v3.1.0"
     //Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
@@ -51,6 +52,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     //load image Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+    //koin
+    def koin_version = '2.2.3'
+    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "io.insert-koin:koin-androidx-scope:$koin_version"
+    implementation "io.insert-koin:koin-androidx-viewmodel:$koin_version"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
@@ -76,4 +82,5 @@ dependencies {
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
     implementation("androidx.fragment:fragment-ktx:1.4.0")
+
 }
