adding DI with Dagger 2

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,10 +58,7 @@ dependencies {
     //load image Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    //koin
-    implementation "io.insert-koin:koin-android:3.1.4"
-    implementation "io.insert-koin:koin-androidx-workmanager:3.1.4"
-    //Dagger
+    //Dagger2
     implementation 'com.google.dagger:dagger:2.40.2'
     kapt 'com.google.dagger:dagger-compiler:2.40.2'
 
@@ -77,7 +74,7 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
 
     //Room
-    def roomVersion = "2.4.0"
+    def roomVersion = "2.4.1"
     implementation("androidx.room:room-runtime:$roomVersion")
     implementation("androidx.room:room-ktx:$roomVersion")
     kapt("androidx.room:room-compiler:$roomVersion")
